# unihack-2023-hackathon

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.cjs
backend/: README.md  pyproject.toml  server.py
src/: recipes.json
src/components/: Column.tsx  Layout.tsx  Navbar.tsx  PlanTable.tsx  Timer.tsx
src/hooks/: useLocalStorage.ts
src/pages/: analyze.tsx  index.tsx  plan.tsx
src/pages/[recipeId]/: index.tsx
src/pages/recipes/: [recipeId].tsx  index.tsx
src/types/: Recipe.ts
